--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,7 @@ url: ''
 baseurl:
 
 # Title of the Site
-title: Civil War: how does this disastrous event affect a country and its neighbours?
+title: "Civil War: how does this disastrous event affect a country and its neighbours?"
 # Description of the Site
 description: An analysis of the impact on the international military material trade and other economical and social factors.
 # URL of Image of the Site
